plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.exchange'
version = '0.0.1-SNAPSHOT'
description = 'event'

ext {
    resilience4jVersion = '2.2.0'
    springCloudVersion = "2023.0.3"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

dependencies {

    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Micrometer
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Spring Cloud
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    //implementation 'org.springframework.cloud:spring-cloud-config-client'

    // Resilience4j
    implementation platform("io.github.resilience4j:resilience4j-bom:2.2.0")

    implementation "io.github.resilience4j:resilience4j-spring-boot3"

    // Jackson
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'


    // Jakarta
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'

    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.apache.camel.springboot:camel-kafka-starter:4.20.0'

    // OAuth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    // Apache Camel
    implementation 'org.apache.camel.springboot:camel-spring-boot-starter:4.20.0'

    // MongoDB
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // Logging
    implementation 'de.siegmar:logback-gelf:4.0.0'
    implementation 'org.zalando:logbook-spring-boot-starter:3.12.0'
    implementation 'org.zalando:logbook-json:3.12.0'
    implementation 'org.zalando:logbook-core:3.12.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // Tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}